# music_app_rust

./: .gitignore
client/: package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  index.css  layout.tsx  model.ts
client/src/components/: MusicBar.tsx  SideBar.tsx  app-sidebar.tsx
client/src/components/ui/: button.tsx  input.tsx  slider.tsx  toast.tsx
client/src/hooks/: useSound.ts
client/src/pages/: Home.tsx  Main.tsx  Search.tsx  Signin.tsx  Signup.tsx
rocket_server/src/: lib.rs
server/: .env  Cargo.toml
server/src/: lib.rs  main.rs  router.rs
server/src/components/: jwt_token.rs  mod.rs  search.rs  signin.rs  signup.rs  stream.rs
