[package]
name = "musicapp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.40.0", feature = ["full"], features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
mysql = "25.0.1"
dotenv = "0.15.0"
bcrypt = "0.15.1"
