[package]
name = "musicapp"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
mysql = "25.0.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
bcrypt = "0.15.1"
rocket_cors = "0.6.0"
jsonwebtoken = "9.3.0"
rusty_ytdl = "0.7.4"
mime = "0.3.17"
